Fix contrast for disabled links

--- a/assets/style.css
+++ b/assets/style.css
@@ -139,5 +139,5 @@ h3.blog-filter {
 .disabled {
   color: currentColor;
   cursor: not-allowed;
-  opacity: 0.5;
+  opacity: 0.7;
 }
